crates/pyenum-derive/tests/ui/fail/empty_enum.rs
use pyenum::PyEnum;

#[derive(Clone, Copy, PyEnum)]
pub enum Bad {}

fn main() {}
