crates/pyenum-derive/tests/ui/fail/empty_enum.stderr
error: #[derive(PyEnum)] requires at least one variant
 --> tests/ui/fail/empty_enum.rs:4:10
  |
4 | pub enum Bad {}
  |          ^^^
